fixed about text alignment

--- a/browser/scss/about/main.scss
+++ b/browser/scss/about/main.scss
@@ -27,6 +27,5 @@
   .aboutHeader {
     font-size: 2.5rem;
     margin-bottom: .5rem;
-    padding-left: 35rem;
   }
 }
